# nwave

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: codecov.yml  dependabot.yml
.github/workflows/: build.yml  coverage.yml  license.yml  publish.yml  tests.yml
src/nwave/: __init__.py  __main__.py  abc.py  audio.py  batch.py  core.py  effects.py  exceptions.py  nwave.py  task.py
src/nwave/_base/: base_effect.py
src/nwave/base/: __init__.py  base_effect.py
src/nwave/common/: iter.py
src/nwave/engine/: __init__.py  task.py
src/nwave/interlocked/: __init__.py  writer.py
src/nwave/scheduler/: __init__.py  config.py  task.py  worker.py
tests/: conftest.py  test_abc.py  test_audio.py  test_base_effect.py  test_batch.py  test_config.py  test_core.py  test_effects.py  test_iter.py  test_nwave.py  test_task.py  test_writer.py
tests/data/: README.md
tests_profile/: profile.py  profile_nwave.py
tests_profile/data/: __init__.py
tests_profile/resources/: profile_audio.py
