[tool.poetry]
name = "nwave"
version = "0.1.0"
description = "Multithread batch resampling and waveform transforms"
authors = ["ionite34 <dev@ionite.io>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/ionite34/nwave"

keywords = ["audio", "resampling", "wav", "wave", "sound"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion"
]

[tool.poetry.dependencies]
python = ">3.7, <3.11"
numba = "^0.55.2"
SoundFile = "^0.10.3"
librosa = "^0.9.2"
samplerate = "^0.1.0"
soxr = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "^3.25.1"
yaspin = "^2.1.0"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
