[tool.poetry]
name = "nwave"
version = "0.1.2"
description = "Multithread batch resampling and waveform transforms"
authors = ["ionite34 <dev@ionite.io>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/ionite34/nwave"

keywords = ["audio", "resampling", "wav", "wave", "sound"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion"
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
numba = ">=0.55.2,<0.57.0"
SoundFile = "^0.10.3"
librosa = "^0.9.2"
samplerate = "^0.1.0"
soxr = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
pylint = "^2.14.4"
black = "^22.6.0"
tox = "^3.25.1"
pre-commit = "^2.20.0"
yaspin = "^2.1.0"
tqdm = "^4.64.0"
colorama = "^0.4.5"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "unused-argument",
    "no-value-for-parameter",
    "no-member",
    "no-else-return",
    "bad-whitespace",
    "bad-continuation",
    "line-too-long",
    "fixme",
    "protected-access",
    "too-few-public-methods",
]

[tool.pylint.design]
max-returns = 8

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
